# simple-rag-with-openllmetry

./: LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
